--- a/src/App.css
+++ b/src/App.css
@@ -33,16 +33,12 @@
     transform: rotate(360deg);
   }
 }
-h5{
-  margin-top: 0;
-  padding-top: 20px;
-}
 .board{
   background: #bbada0;
   width: 400px;
   padding: 10px;
   border-radius: 4px;
-  margin: 0 auto;
+  margin: 20px auto;
 }
 .board__row{
   display: flex;
@@ -108,4 +104,38 @@ h5{
 .color-2048{
   color: #f9f6f2;
   background: #edc22e;
+}
+
+
+.info{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 20px;
+}
+
+.score{
+  margin-right: 10px;
+  color: #776e65;
+  width: 90px;
+  padding: 15px 15px;
+  background: #eee4da;
+  border-radius: 5px; 
+  text-transform: uppercase;
+  font-weight: normal;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.restart{
+  margin-left: 10px;
+  color: #776e65;
+  height: 47px;
+  padding: 10px;
+  width: 90px;
+  background: #eee4da;
+  border-radius: 5px; 
+  outline: none;
+  border: none;
+  cursor: pointer;
 }
