--- a/src/App.css
+++ b/src/App.css
@@ -129,11 +129,11 @@
 
 .restart{
   margin-left: 10px;
-  color: #776e65;
+  color: #ffff;
   height: 47px;
   padding: 10px;
   width: 90px;
-  background: #eee4da;
+  background: #bbada0;
   border-radius: 5px; 
   outline: none;
   border: none;
