--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@
   justify-content: center;
   font-weight: bold;
   font-size: 44px;
-  border-radius: 6px;
+  border-radius: 4px;
   line-height: 1;
 }
 .board__cell--empty{
@@ -99,11 +99,13 @@
 }
 .color-1024{
   color: #f9f6f2;
+  font-size: 34px;
   background: #edc53f;
 }
 .color-2048{
   color: #f9f6f2;
-  background: #edc22e;
+  font-size: 34px;
+  background: #9e8122;
 }
 
 
@@ -120,7 +122,7 @@
   width: 90px;
   padding: 15px 15px;
   background: #eee4da;
-  border-radius: 5px; 
+  border-radius: 4px; 
   text-transform: uppercase;
   font-weight: normal;
   margin-top: 0;
@@ -134,7 +136,7 @@
   padding: 10px;
   width: 90px;
   background: #bbada0;
-  border-radius: 5px; 
+  border-radius: 4px; 
   outline: none;
   border: none;
   cursor: pointer;
@@ -144,6 +146,8 @@
   body{
     height: 100%;
     overflow: hidden;
+    position: fixed;
+    width: 100%;
   }
   .App{
     box-sizing: border-box;
@@ -171,5 +175,9 @@
     width: 65px;
     height: 65px;
     font-size: 34px;
+  }
+  .color-1024,
+  .color-2048{
+    font-size: 24px;
   }
 }
